...
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name:"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/create_post_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Description:"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/create_post_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
...
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:text="Select a location" />
                <TextView
                    android:id="@+id/choose_location_view"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="Max Portions:"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/create_post_decMaxPortions"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="-"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Price (per portion): $"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/create_post_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
...

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@drawable/send_white"
        android:id="@+id/create_post"/>

</LinearLayout>

