...
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/create_post"
        android:orderInCategory="200"
        android:title="Create Post"
        app:showAsAction="ifRoom"
        android:icon="@drawable/create_post_white"
        />
</menu>
