<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/vertical_margin"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="cs310.fidgetspinners.grubmate.ui.NotificationFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/incoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="Incoming"
            android:textColor="@color/black"
            android:padding="0dp"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_marginTop="0dip"
            android:layout_marginBottom="0dip"/>

        <Button
            android:id="@+id/outgoing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Outgoing"
            android:textColor="@color/black"
            android:padding="0dp"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip"
            android:layout_marginTop="0dip"
            android:layout_marginBottom="0dip"/>

        <Button
            android:id="@+id/subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="subscribe"
            android:textColor="@color/black"
            android:padding="0dp"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_marginTop="0dip"
            android:layout_marginBottom="0dip"/>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:id="@+id/dynamic_list">
    </ListView>

</LinearLayout>
