...
        android:id="@+id/bottom_feed"
        android:enabled="true"
        android:icon="@drawable/feed"
        android:title="Feed"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_notifications"
        android:enabled="true"
        android:icon="@drawable/notification"
        android:title="Notifications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_groups"
...
